--- a/Window Shopper/Base.lproj/Main.storyboard
+++ b/Window Shopper/Base.lproj/Main.storyboard
@@ -27,25 +27,86 @@
                                     <constraint firstAttribute="height" constant="60" id="iuj-Io-92a"/>
                                 </constraints>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Your hourly wage" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pa6-Jv-cDT" customClass="CurrencyTextField" customModule="Window_Shopper" customModuleProvider="target">
-                                <rect key="frame" x="48" y="169" width="276" height="46"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Your hourly wage" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pa6-Jv-cDT" customClass="CurrencyTextField" customModule="Window_Shopper" customModuleProvider="target">
+                                <rect key="frame" x="20" y="150" width="335" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="rSP-de-mWT"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                             </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Item price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ds6-eK-1Zh" customClass="CurrencyTextField" customModule="Window_Shopper" customModuleProvider="target">
+                                <rect key="frame" x="20" y="215" width="335" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Xa3-Zm-VmE"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="32" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xbr-Du-nuU">
+                                <rect key="frame" x="20" y="300" width="335" height="62.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="52"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hours" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="87H-gz-fmf">
+                                <rect key="frame" x="134" y="367.5" width="106" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="7es-qY-ULi"/>
+                                    <constraint firstAttribute="width" constant="106" id="Ckd-Oz-xgp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LFR-jI-3Nz">
+                                <rect key="frame" x="20" y="617" width="335" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Sz7-ir-0Ni"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" title="Clear Calculator">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="clearCalculatorPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xaG-TU-yR8"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Xbr-Du-nuU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1Il-Ol-gsT"/>
+                            <constraint firstItem="87H-gz-fmf" firstAttribute="top" secondItem="Xbr-Du-nuU" secondAttribute="bottom" constant="5" id="1Ni-Iz-pSK"/>
+                            <constraint firstItem="pa6-Jv-cDT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="6Xg-b5-fhQ"/>
+                            <constraint firstItem="87H-gz-fmf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6cK-21-vBx"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pa6-Jv-cDT" secondAttribute="trailing" constant="20" id="CPQ-Oa-TCd"/>
+                            <constraint firstItem="Xbr-Du-nuU" firstAttribute="width" secondItem="Ds6-eK-1Zh" secondAttribute="width" id="Cdo-p5-Il7"/>
                             <constraint firstItem="Sgb-xS-5Ad" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="D5h-Ir-KU1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="LFR-jI-3Nz" secondAttribute="bottom" constant="20" id="DEf-zO-ecX"/>
                             <constraint firstItem="xvI-5R-Pqf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HzX-ah-8A1"/>
                             <constraint firstItem="Sgb-xS-5Ad" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="K3n-Ml-Gwi"/>
+                            <constraint firstItem="Ds6-eK-1Zh" firstAttribute="height" secondItem="pa6-Jv-cDT" secondAttribute="height" id="MGO-f8-KfO"/>
+                            <constraint firstItem="LFR-jI-3Nz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Y4q-gG-KUK"/>
+                            <constraint firstItem="Ds6-eK-1Zh" firstAttribute="trailing" secondItem="pa6-Jv-cDT" secondAttribute="trailing" id="YBC-mt-mOg"/>
                             <constraint firstItem="xvI-5R-Pqf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="b2m-XA-Bpe"/>
+                            <constraint firstItem="pa6-Jv-cDT" firstAttribute="top" secondItem="xvI-5R-Pqf" secondAttribute="bottom" constant="35" id="cxa-1Y-gDH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LFR-jI-3Nz" secondAttribute="trailing" constant="20" id="gSe-JO-QNp"/>
                             <constraint firstItem="Sgb-xS-5Ad" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="jPr-HC-ERq"/>
+                            <constraint firstItem="Xbr-Du-nuU" firstAttribute="top" secondItem="Ds6-eK-1Zh" secondAttribute="bottom" constant="45" id="l95-sF-2ty"/>
+                            <constraint firstItem="Ds6-eK-1Zh" firstAttribute="leading" secondItem="pa6-Jv-cDT" secondAttribute="leading" id="mdU-2l-h11"/>
                             <constraint firstItem="Sgb-xS-5Ad" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="neM-fB-hUB"/>
+                            <constraint firstItem="Ds6-eK-1Zh" firstAttribute="top" secondItem="pa6-Jv-cDT" secondAttribute="bottom" constant="25" id="xka-ef-MdB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="hoursLabel" destination="87H-gz-fmf" id="F1h-Xt-a4I"/>
+                        <outlet property="priceText" destination="Ds6-eK-1Zh" id="VMO-Ya-Jg7"/>
+                        <outlet property="resultLabel" destination="Xbr-Du-nuU" id="7GM-s2-xsK"/>
+                        <outlet property="wageText" destination="pa6-Jv-cDT" id="UUP-sD-klF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
